--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,4 @@
-h1 {
-  font-size: 4em;
-  color: blue;
-  transition: all 0.3s;
-  &:hover {
-    transform: translateX(30px);
-    color: red;
-  }
-}
-.bg {
-  background-image: url("~@imgs/dummy.png");
-  background-size: cover;
-  width: 100px;
-  height: 100px;
+body {
+  margin: 0;
+  padding: 0;
 }
